# avl-render-tecnici

./: .gitignore  README.md  clean-and-build.bat  package.json  setup_git.ps1
.claude/: settings.local.json
.cursor/rules/: avl-core.mdc  disegno-tecnico-workflow.mdc  hardware-ledwall.mdc
avl-render/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
avl-render/public/: viewer-template.html
avl-render/scripts/: gen-icons.mjs
avl-render/src/: App.tsx  index.css
avl-render/src-tauri/: Cargo.toml  tauri.conf.json
avl-render/src-tauri/icons/: icon.icns
avl-render/src-tauri/src/: lib.rs  main.rs
avl-render/src/components/: ErrorBoundary.tsx
avl-render/src/components/Preview/: Viewer3D.tsx
avl-render/src/components/Sidebar/: EventTab.tsx  ExportPanel.tsx  LedTab.tsx  StructureTab.tsx
avl-render/src/engine/: compute.ts  controller-db.ts  draw-technical.ts  export.ts  pitch-db.ts  project-to-p.ts  render-orthographic.ts  scene-builder.ts  truss-db.ts
avl-render/src/hooks/: useDebouncedCallback.ts
avl-render/src/store/: project-store.ts
avl-render/src/types/: project.ts
docs/: ARCHITETTURA.md  CHANGELOG.md  STRUTTURA_PROGETTO.md
