[package]
name = "avl-render-tecnici"
version = "0.1.0"
description = "AVL Render Tecnici - Generatore disegni tecnici LEDwall"
authors = ["AVL"]
edition = "2021"

[lib]
name = "avl_render_tecnici_lib"
crate-type = ["rlib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde_json = "1"
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
